// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button With Some Emoji 1`] = `
<button
  disabled={false}
  onClick={[Function]}
  style={Object {}}
  type="button"
>
  😀 😎 👍 💯
</button>
`;

exports[`Storyshots Button With Text 1`] = `
<button
  disabled={false}
  onClick={[Function]}
  style={Object {}}
  type="button"
>
  Hello Button
</button>
`;

exports[`Storyshots Button with counter 1`] = `
<button
  disabled={false}
  onClick={[Function]}
  style={Object {}}
  type="button"
>
  Testing: 0
</button>
`;
